# project-kylan

./: .gitignore  .npmignore  Anchor.toml  CNAME  README.md  index.html  modules.html  package-lock.json  package.json
.github/workflows/: main.yml
assets/: search.js
classes/: default.html
lib/: constant.ts  index.ts  utils.ts
lib-test/: core.test.ts  pretest.ts
programs/project-kylan/: Cargo.toml
programs/project-kylan/src/: errors.rs  lib.rs
programs/project-kylan/src/instructions/: burn.rs  initialize_cert.rs  initialize_cheque.rs  initialize_printer.rs  mod.rs  print.rs  set_cert_fee.rs  set_cert_state.rs  set_cert_taxman.rs  transfer_authority.rs
programs/project-kylan/src/schema/: cert.rs  cheque.rs  mod.rs  printer.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000077.sst  000078.sst  000079.sst  000080.sst  000081.sst  000082.sst  000083.sst  IDENTITY  LOG  LOG.old.1645171311245492  MANIFEST-000084
tests/: pretest.ts  project-kylan.ts
